--- a/src/app/views/farms/card-style/card-style.component.css
+++ b/src/app/views/farms/card-style/card-style.component.css
@@ -30,6 +30,10 @@
     justify-content: end;
 }
 
+.align-start{
+    align-items: flex-start;
+}
+
 /* Css Reset Start*/
 
 .cards-container{
@@ -42,7 +46,7 @@
     overflow: inherit;
     background: rgb(255, 255, 255);
     border-radius: 24px;
-    min-width: 350px;
+    min-width: 360px;
     margin: 0px 12px 46px;
     margin: 0px 12px 46px;
     border-bottom: 3px solid rgb(231, 227, 235);
@@ -61,18 +65,33 @@
    
 }
 
-.back-img-card-header{
+.container-back-img-card-header{
     position: absolute;
     width: 32px;
     height: 32px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.25);
 }
-.front-img-card-header{
-    position: relative;
+.container-front-img-card-header{
+     position: relative;
     z-index: 4;
     width: 52px;
     height: 52px;
     top: 10px;
     left: 10px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+
+.back-img-card-header{
+    width: 100%;
+    height: 100%;
+}
+
+.front-img-card-header{
+   width: 100%;
+   height: 100%;
 }
 
 .cake-bnb{
@@ -208,12 +227,15 @@
 .card-footer {
     padding: 1.5rem;
 }
-
+.cont-txt-det-hid-arrow {
+    cursor: pointer;
+}
 .txt-details-hide{
     color: rgb(31, 199, 212);
     font-weight: 600;
     line-height: 1.5;
-    font-size: 16px
+    font-size: 16px;
+    
 }
 
 /*Sub card details*/
