--- a/src/app/views/farms/filters-bar/filters-bar.component.css
+++ b/src/app/views/farms/filters-bar/filters-bar.component.css
@@ -149,10 +149,16 @@ button{
 }
 /* TABLE ENDS */
 
+.item-left{
+    column-gap: .5rem;
+}
 .card-filter-svg, .list-filter-svg{
     filter: invert(96%) sepia(0%) saturate(5894%) hue-rotate(257deg) brightness(84%) contrast(86%);
 }
 
+.container-svg-list-card-filter-svg{
+    cursor: pointer;
+}
 /* SWITCH  small toogle STart */
 
 .container-staked-farms-toggle{
@@ -202,11 +208,11 @@ button{
     
 }
 
-
-
+/*Adding removing background color on toggling*/
 .newColorChecked{
     background-color: rgb(49, 208, 170);
 }
+
 
 .container-toggle-text-staked > p{
     color: rgb(40, 13, 95);
@@ -228,6 +234,8 @@ button{
     border: 1px solid rgb(215, 202, 236);
     width: auto;
     cursor: pointer;
+     overflow: hidden;
+    
 }
 
 .container-live-finished-toggle a{
@@ -235,6 +243,7 @@ button{
     padding-right: 12px;
     font-weight: 600;
     color: rgb(122, 110, 170);
+   
 }
 
 
@@ -255,9 +264,20 @@ button{
     transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
     height: 32px;
     padding: 0px 16px;
-     background-color: rgb(122, 110, 170);
-    color: rgb(255, 255, 255)!important;
     
+    
+}
+
+.link-finished{
+    border-radius: 16px;
+}
+
+/*Class for router link*/
+.switch-live-finished{
+     background-color: rgb(122, 110, 170);
+     color: rgb(255, 255, 255)!important;
+     height: 100%;
+     padding: .5rem;  
 }
 
 /* Switch toggle big ends */
@@ -360,12 +380,14 @@ box-shadow: rgb(118 69 217) 0px 0px 0px 1px, rgb(118 69 217 / 60%) 0px 0px 0px 4
 
 
 
+
 @media only screen and (max-width: 572px) {
     .filter-left{
         width: 100%;
     }
     .item-left{
         justify-content: space-between;
+        margin-bottom: 16px;
     }
 
     .grid-container{
@@ -380,6 +402,13 @@ box-shadow: rgb(118 69 217) 0px 0px 0px 1px, rgb(118 69 217 / 60%) 0px 0px 0px 4
  
 }
 
+
+@media only screen and (max-width: 412px){
+      .container-live-finished-toggle{
+        margin-top: 16px!important;
+    }
+}
+
 @media only screen and (max-width: 370px) {
     .container-toolbar-farms-pools{
         justify-content: start;
@@ -388,4 +417,19 @@ box-shadow: rgb(118 69 217) 0px 0px 0px 1px, rgb(118 69 217 / 60%) 0px 0px 0px 4
         margin-top: 0;
        
     }
+   
+  
+
+}
+.active-component-style{
+    filter: invert(94%) sepia(92%) saturate(7367%) hue-rotate(146deg) brightness(87%) contrast(88%);
+}
+
+
+
+.search-results{
+    height: 100%;
+    overflow-y: scroll;
+  
+
 }
