--- a/src/app/Project/homepage/section-cake-makes/section-cake-makes.component.css
+++ b/src/app/Project/homepage/section-cake-makes/section-cake-makes.component.css
@@ -181,3 +181,11 @@
   justify-content: space-between;
   align-items: center;
 }
+
+
+@media screen  and (max-width: 852px){
+   .section-homepage-cake-makes {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
