--- a/src/styles.css
+++ b/src/styles.css
@@ -60,3 +60,42 @@
 }
 
 
+
+
+/* Css Reset Start*/
+.d-flex{
+    display: flex;
+}
+
+.wrap{
+    flex-wrap: wrap;
+}
+.column{
+    flex-direction: column;
+}
+.center{
+    justify-content: center;
+}
+.space-between{
+    justify-content: space-between;
+}
+.space-around{
+    justify-content: space-around;
+}
+.star{
+    justify-content: start;
+}
+
+.vert-center{
+    align-items: center;
+}
+
+.end{
+    justify-content: end;
+}
+
+.align-start{
+    align-items: flex-start;
+}
+
+/* Css Reset Start*/
