top-pools-table version 0.1

--- a/src/app/views/info/info.component.html
+++ b/src/app/views/info/info.component.html
@@ -2,5 +2,6 @@
 
 <div class="container-info">
     <cake-top-tokens-table></cake-top-tokens-table>
+    <cake-top-pools-table></cake-top-pools-table>
    
 </div>
