transactions-table version 0.1

--- a/src/app/views/info/info.component.html
+++ b/src/app/views/info/info.component.html
@@ -3,5 +3,6 @@
 <div class="container-info">
     <cake-top-tokens-table></cake-top-tokens-table>
     <cake-top-pools-table></cake-top-pools-table>
+    <cake-transactions-table></cake-transactions-table>
    
 </div>
