--- a/src/app/views/info/info.component.html
+++ b/src/app/views/info/info.component.html
@@ -1,6 +1,8 @@
 
+<cake-search-navigation></cake-search-navigation>
 
 <div class="container-info">
+
     <cake-top-tokens-table></cake-top-tokens-table>
     <cake-top-pools-table></cake-top-pools-table>
     <cake-transactions-table></cake-transactions-table>
