-am search-navigation-info version 0.2

--- a/src/app/views/info/search-navigation/search-navigation.component.html
+++ b/src/app/views/info/search-navigation/search-navigation.component.html
@@ -1,6 +1,6 @@
 
 <!-- overlay -->
-<div class="overlay"></div>
+<div class="overlay" style="display: none"></div>
 
 <!-- Container navigation search Start -->
 <div class="container-navigation-search-info d-flex space-between">
@@ -21,7 +21,7 @@
     <!-- Navigation toggle search bar ends -->
 
     <!-- Modal box start -->
-               <div class="modal-box-container">
+               <div class="modal-box-container" style="display: none">
                     <div class="container-search-watchlist d-flex">
                                 <p class="modal-btn-search switch-search-watchlist">Search</p>
                                 <p class="modal-btn-watchlist">Watchlist</p>
