--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
   <div class="flex-left">
     <div class="container-logo-menu-left">
       <!--Containers logo desktop tablet mobile-->
-      <div class="container-logo-text" routerLink="/homepage">
+      <div class="container-logo-text" routerLink="/">
         <img src="../../../assets/nav-bar/logo-home.svg" style="height:34px; " alt="">
       </div>
       <div class="container-logo-mobile">
