search-navigation-info version 0.5

--- a/src/app/views/info/search-navigation/search-navigation.component.css
+++ b/src/app/views/info/search-navigation/search-navigation.component.css
@@ -268,3 +268,7 @@ box-shadow: rgb(118 69 217) 0px 0px 0px 1px, rgb(118 69 217 / 60%) 0px 0px 0px 4
 }
 
 
+.watchlist{
+    fill: rgb(255, 178, 55);
+    stroke: rgb(255, 178, 55);
+}
