--- a/src/app/core/nav-bar/sub-menu/sub-menu/sub-menu.component.html
+++ b/src/app/core/nav-bar/sub-menu/sub-menu/sub-menu.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li *ngFor="let item of menuChoosen[0].listItems" class="sub-menu-items-container">
       <div>
-        <p><a routerLink="{{item.routerLink}}">{{item.itemName}}</a></p>
+        <p><a routerLink="{{item.routerLink}}" routerLinkActive="{{item.routerLinkActive}}">{{item.itemName}}</a></p>
       </div>
       <div *ngIf="item === 'Perpetual' || item === 'Blog'|| item === 'Docs'  ">
         <img [src]="menuChoosen[0].svgPattern " alt="">
