--- a/src/app/Project/homepage/homepage.component.html
+++ b/src/app/Project/homepage/homepage.component.html
@@ -1,3 +1,4 @@
 <cake-popup-nav-bar *ngIf="showBanner === 'true'"></cake-popup-nav-bar>
 <cake-moon></cake-moon>
 <cake-win></cake-win>
+<cake-section-cake-makes></cake-section-cake-makes>
