--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 
 <div class="cont" style="position: relative; z-index: -2;">
- <cake-top-traders></cake-top-traders>
+<!--  <cake-top-traders></cake-top-traders>
 <cake-prizes></cake-prizes>
 <cake-rules></cake-rules>
 <cake-last-section></cake-last-section>
@@ -16,7 +16,8 @@
 
 <cake-third-section></cake-third-section>
 
-<cake-connect-popup></cake-connect-popup>
+<cake-connect-popup></cake-connect-popup> -->
+<cake-homepage></cake-homepage>
 
 
 
