add-ifo-card-cake

--- a/src/app/views/ifo/ifo-shared/ifo-cake/ifo-cake.component.html
+++ b/src/app/views/ifo/ifo-shared/ifo-cake/ifo-cake.component.html
@@ -11,6 +11,7 @@
                 <p>ENDED</p>
             </div>
             <div class="circle-img">
+                <img src="/Pancake/src/assets/Ifo-Assets/cake-circle.png" alt="cake circle">
             </div>
         </div>
 
@@ -26,15 +27,19 @@
             <button class="btn-ifo-cake">Go to new CAKE pool</button>
         </div>
 
-        <div class="text-submain">
-            <p class="submain">CAKE STAKED</p>
-            <h2 class="transp">0.0</h2>
-        </div>
 
-        <div class="text-footer">
-            <p class="footer">Recent CAKE profit:</p>
-            <h4 class="transp">0.0</h4>
-        </div>
+        <div class="sub-main-text">
+
+            <div class="text-submain">
+                <p class="submain">CAKE STAKED</p>
+                <h2 class="transp">0.0</h2>
+            </div>
+
+            <div class="text-footer">
+                <p class="footer">Recent CAKE profit:</p>
+                <h4 class="transp">0.0</h4>
+            </div>
+    </div>
 
     </div>
 
