--- a/src/app/views/ifo/ifo-shared/ifo-cake/ifo-cake.component.css
+++ b/src/app/views/ifo/ifo-shared/ifo-cake/ifo-cake.component.css
@@ -1,5 +1,15 @@
 .container-card-cake {
-     width: 370px;
+    max-width: 370px;
+    width: 100%;
+    height: 100%;
+    background: rgb(255, 255, 255);
+    border-radius: 24px;
+    color: rgb(40, 13, 95);
+    overflow: inherit;
+    position: relative;
+    padding: 1px 1px 3px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.459);
+     
 }
 
 .header-cake {
@@ -9,6 +19,7 @@
     border-radius: 24px 24px 0px 0px;
     padding: 16px;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .text-header {
@@ -31,6 +42,27 @@
     position: relative;
     width: 100%;
 }
+
+
+.img-container {
+    position: absolute;
+    top: 20px;
+    right: -30px;
+    width: 120px;
+    transform: rotate(-318deg);
+    color: white;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 600;
+    background-color: rgb(237, 75, 158);
+    z-index: 7;
+    padding: 4px 0px;
+}
+
+
+
+
+
 .circle-img {
     max-height: 64px;
     max-width: 64px;
@@ -53,6 +85,8 @@
 
 
 .message-container {
+    width: 85%;
+    margin-top: 1rem;
     border: 1px solid rgb(255, 178, 55);
     padding: 16px;
     border-radius: 16px;
@@ -63,38 +97,9 @@
 }
 
 
-
-
-
-
-
-
-.img-container {
-    position: absolute;
-    top: 20px;
-    right: -30px;
-    width: 120px;
-    transform: rotate(-318deg);
-    color: white;
-    text-align: center;
-    font-size: 14px;
-    font-weight: 600;
-    background-color: rgb(237, 75, 158);
-    z-index: 7;
-    padding: 4px 0px;
-}
-
-
-
-
-
-
-
-
-
-
 .btn-ifo-cake {
-    margin-right: 1rem;
+    width: 100%;
+    margin-top: 1rem;
     align-items: center;
     border: 0px;
     border-radius: 16px;
@@ -111,9 +116,19 @@
     padding: 0px 24px;
     background-color: rgb(31, 199, 212);
     color: white;
-    margin-right: 16px
+    
   }
 
   .btn-ifo-cake:hover {
       opacity: 0.65;
+  }
+
+
+  .sub-main-text {
+      width: 100%;
+      margin: 1rem;
+      padding: 1rem;
+      display: flex;
+      flex-flow: column;
+      align-items: flex-start;
   }
