--- a/src/app/views/info/info.component.html
+++ b/src/app/views/info/info.component.html
@@ -4,7 +4,9 @@
 <div class="container-info">
 
     <cake-top-tokens-table></cake-top-tokens-table>
-    <cake-top-pools-table></cake-top-pools-table>
+    <div *ngIf="topPoolsTokenParent">
+        <cake-top-pools-table [topPoolsTokenOrigin]="topPoolsTokenParent"></cake-top-pools-table>
+    </div>
     <cake-transactions-table></cake-transactions-table>
    
 </div>
