pancake swap versione 0.7

--- a/src/app/Project/homepage/patata-in-seconds/patata-in-seconds.component.html
+++ b/src/app/Project/homepage/patata-in-seconds/patata-in-seconds.component.html
@@ -38,7 +38,8 @@
     <p class="uno">Connect your crypto wallet to start using the app in seconds.</p>
     <p class="due">No registration needed.</p>
     <p class="tre">Learn how to start</p>
-    <button>Connect Wallet</button>
+    <!-- <button>Connect Wallet</button> -->
+    <cake-button-connect  style="margin-top: 24px; z-index: 999;"></cake-button-connect>
   </div>
 
 
