--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -65,7 +65,7 @@
           <div  class="nav-item dots" #dots data-menu="dots">
             <img src="../../../assets/nav-bar/dots-nav-bar.svg" style=" width: 20px;" alt="">
           </div>
-          <cake-sub-menu *ngIf="subMenu[4].visibility" [menuChoosen]="menuSelected  "></cake-sub-menu>
+          <cake-sub-menu *ngIf="subMenu[4].visibility" [menuChoosen]="menuSelected"  class="sub-menu-mobile-dots"></cake-sub-menu>
         </div>
       </div>
     </div>
