--- a/src/app/views/farms/card-style/card-style.component.html
+++ b/src/app/views/farms/card-style/card-style.component.html
@@ -55,7 +55,8 @@
                     <p class="txt-cake">{{data.nameToken | uppercase}} LP</p>
                     <p class="txt-earned">STAKED</p>
                 </div>
-                <button class="btn-connect-wallet">Connect Wallet</button>
+                <!-- <button class="btn-connect-wallet">Connect Wallet</button> -->
+                <cake-button-connect ></cake-button-connect>
             </div>
             <div class="card-footer">
                 <div class="cont-txt-det-hid-arrow d-flex center" (click)="rotate($event)">
