--- a/src/app/views/farms/sub-row-table/sub-row-table.component.html
+++ b/src/app/views/farms/sub-row-table/sub-row-table.component.html
@@ -20,7 +20,8 @@
         </div>
         <div class="connect-wallet-container">
             <p>START FARMING</p>
-            <button class="btn-connect-wallet">Connect Wallet</button>
+            <!-- <button class="btn-connect-wallet">Connect Wallet</button> -->
+            <cake-button-connect></cake-button-connect>
         </div>
 
         <div class="container-apr-mul-liq d-flex space-between" *ngFor="let data of formsData" >
