--- a/src/app/core/nav-bar/nav-bar.component.css
+++ b/src/app/core/nav-bar/nav-bar.component.css
@@ -213,7 +213,7 @@
     font-weight: 400;
     font-size: 10px;
 
-    padding-top: 5px;
+    /* padding-top: 5px; */
     padding-right: 8px;
     padding-left: 8px;
     background: rgb(255, 255, 255);
@@ -227,7 +227,7 @@
       flex-direction: column;
       align-items: center;
        border-radius: 16px;
-       padding: 0 .7rem;
+       padding: .5rem .7rem;
 
   }
 
@@ -251,7 +251,6 @@
   .container-icon-text-nav-footer > div > img{
       filter: invert(53%) sepia(20%) saturate(958%) hue-rotate(211deg) brightness(81%) contrast(82%);
   }
-
 
 
 }
