--- a/src/app/modals/connect-popup/connect-popup.component.css
+++ b/src/app/modals/connect-popup/connect-popup.component.css
@@ -14,7 +14,8 @@
   position: absolute;
      position: fixed;
    overflow-y: scroll;
-   top: 0; right: 0; bottom: 0; left: 0
+   top: 0; right: 0; bottom: 0; left: 0;
+   z-index: 9999999;
 }
 
 
