--- a/src/app/shared/button-connect/button-connect.component.css
+++ b/src/app/shared/button-connect/button-connect.component.css
@@ -16,16 +16,19 @@
     background-color: rgb(31, 199, 212);
     color: white;
     width: 100%;
+    box-shadow: rgb(14 14 44 / 40%) 0px -1px 0px 0px inset;
+    cursor: pointer;
 }
 
 .buttonFooter {
     display: flex;
-    margin-top: 70px;
     opacity: 1;
     transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
     width: 165.16px;
+    width: 100%;
 }
 
 .buttonFooter:hover {
     opacity: 0.7;
 }
+
