pancake swap versione 0.8

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -151,7 +151,7 @@
 
       <div class="side-left">
 
-                <div class="left">
+                <!-- <div class="left">
 
                   <input type="checkbox">
 
@@ -233,8 +233,9 @@
                     </div>
                   </div>
 
+                </div> -->
 
-                </div>
+                <cake-dark-mode-toggle></cake-dark-mode-toggle>
 
                 <div class="global">
                   <div class="svg"><svg viewBox="0 0 24 24" color="#B8ADD2" width="24px" xmlns="http://www.w3.org/2000/svg" class="sc-eaf7e66-0 ekdbJY">
